[package]
name = "FerrumVM"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.3.0"          # For managing byte buffers, useful for memory and storage.
ethereum-types = "0.12"  # Includes Ethereum types like U256, Address, etc.
rlp = "0.5"              # Recursive Length Prefix encoding/decoding for contract data.
serde = { version = "1.0", features = ["derive"] } # Serialization for JSON handling.
tokio = { version = "1.0", features = ["full"] }   # Async runtime, helpful later for JSON-RPC.